[CDAP-8951] - Fix Metadata entity detail page has wrong font color for Business Tags

--- a/cdap-ui/app/tracker/tracker.less
+++ b/cdap-ui/app/tracker/tracker.less
@@ -543,6 +543,7 @@ body.state-tracker {
     }
     &.user {
       background-color: @tag-bg;
+      color: @title-font-color;
       span.fa-times { -webkit-text-stroke: 1px @tag-bg; }
     }
     span.fa-times {
